--- a/database/compare.ipynb
+++ b/database/compare.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'binance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbinance\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclient\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Client\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'binance'"
+     ]
+    }
+   ],
    "source": [
     "from binance.client import Client\n",
     "import pandas as pd"
@@ -12,14 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data loaded 100%\n"
+     "ename": "NameError",
+     "evalue": "name 'Client' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m client \u001b[38;5;241m=\u001b[39m \u001b[43mClient\u001b[49m()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# -- You can change the crypto pair ,the start date and the time interval below --\u001b[39;00m\n\u001b[0;32m      4\u001b[0m pairName \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBTCUSDT\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Client' is not defined"
      ]
     }
    ],
@@ -28,7 +44,7 @@
     "\n",
     "# -- You can change the crypto pair ,the start date and the time interval below --\n",
     "pairName = \"BTCUSDT\"\n",
-    "startDate = \"01 january 2017\"\n",
+    "startDate = \"01 january 2021\"\n",
     "timeInterval = Client.KLINE_INTERVAL_1HOUR\n",
     "\n",
     "# -- Load all price data from binance API --\n",
@@ -225,11 +241,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2be5faf79681da6f2a61fdfdd5405d65d042280f7fba6178067603e3a2925119"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -243,9 +256,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3e3e8fa0a77a408a1a2f5a3bc64750c23b06cd387592a1b8e99b9e9cb1d3cd7f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
